[package]
name = "pallet-auto-tasks"
version = "0.1.0"
edition = "2021"
description = "A Substrate pallet for automated state-driven tasks"
authors = ["Polkadot Africa <info@polkadot.africa>"]
license = "Apache-2.0"
homepage = "https://github.com/polkadotafrica/polkadot-sdk-TWB"
repository = "https://github.com/polkadotafrica/polkadot-sdk-TWB"

[workspace]  # <--- This is the key addition to make it independent

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
log = { version = "0.4.20", default-features = false }

# Substrate dependencies
frame-support = { path = "../support", default-features = false }
frame-system = { path = "../system", default-features = false }
sp-std = { path = "../../primitives/std", default-features = false }

[dev-dependencies]
sp-core = { path = "../../primitives/core" }
sp-io = { path = "../../primitives/io" }
sp-runtime = { path = "../../primitives/runtime" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "log/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
]
experimental = []
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]