[package]
name = "pallet-auto-tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { 
    version = "4.0.0-dev", 
    default-features = false, 
    features = ["pallet", "std"] 
}
frame-system = { 
    version = "4.0.0-dev", 
    default-features = false,
    features = ["std"] 
}
sp-core = { version = "6.0.0", default-features = false }
sp-runtime = { version = "6.0.0", default-features = false }
sp-std = { version = "4.0.0-dev", default-features = false }
sp-io = { version = "6.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std", 
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std"
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks"
]
experimental = []